# promptcraft-desktop

./: .gitignore  .prettierignore  ANTHROPIC_INTEGRATION.md  PLAN-generation-implementation.md  README.md  SCENE_MANAGER.md  TODO  TOS.md  TROUBLESHOOTING.md  eslint.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.jsx  index.css  main.jsx  tailwind-safelist.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: api-access.json  default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/db/: mod.rs  models.rs  operations.rs  schema.rs
src-tauri/src/generation/: mod.rs  processor.rs  utils.rs
src-tauri/src/generation/providers/: a1111.rs  anthropic.rs  comfyui.rs  google.rs  grok.rs  invokeai.rs  midjourney.rs  mod.rs  openai.rs
src/components/: EnhancementErrorModal.jsx  GrokBuilder.jsx  MidjourneyBuilder.jsx  SettingsModal.jsx  VideoBuilder.jsx
src/components/builders/: ImageBuilder.jsx  LocalImageBuilder.jsx
src/components/features/: ImageAnalysis.jsx  JobDetailModal.jsx  JobHistoryPanel.jsx  LocalEmptyState.jsx  LocalToolSetup.jsx  SceneManager.jsx
src/components/features/jobs/: CreateJobSequenceDialog.jsx  (+1 more)
src/components/navigation/: GenerationModeToggle.jsx  LocalModelSelector.jsx  ModelSelector.jsx  TabBar.jsx  TopNav.jsx
src/constants/: models.js
src/hooks/: useJobs.js  useLocalModels.js  useProviders.js  useScenes.js
src/lib/promptcraft-ui/: index.js
src/utils/: aiApi.js  downloadHelper.js  fileUrlHelper.js  localModelDiscovery.js  localToolConfig.js  urlValidator.js
(+21 files in other folders)
